# gdelt2py

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
lookup/: V1-GKGTHEMS.txt  V2-GKGTHEMS.txt  check_time_slot_integrity.py
src/gdelt2py/: __init__.py  analyzer.py  check.py  gdelt2.py  gdelt2evet.py  task.py  test.ipynb  test_gdelt2.py
src/gdelt2py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_gdelt2.py
