[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "gdelt2"
version = "0.0.1"
authors = [
  { name="RakerZh", email="gitrustz10@gmail.com" },
]
description = "A package for gdelt2 data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RakerZh/gdelt2py"
"Bug Tracker" = "https://github.com/RakerZh/gdelt2py/issues"
